@@ -1,4 +1,3 @@
 ``opts`` may be NULL or a BSON document with additional command options:
 
 * ``validate``: Construct a bitwise-or of all desired :symbol:`bson_validate_flags_t <bson_validate_with_error>`. Set to ``false`` to skip client-side validation of the provided BSON documents.
-* ``bypassDocumentValidation``: Set to ``true`` to skip server-side schema validation of the provided BSON documents.
